--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     <h1>Jorge Mendez</h1>
                 </div>
                 <div class="presentation__description__subTitle">
-                    <h2>Desarrollador Front End.</h2>
                     <h2>Analista Programador Universitario.</h2>
+                    <h2>Desarrollador Front End.</h2>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 presentation__img">
@@ -81,18 +81,21 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-sm">
                         <h3 class="aboutMe__title">Sobre mi</h3>
-                        <P class="aboutMe__text animado">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur
-                            earum laborum dolorem vitae placeat iste laudantium, quibusdam quidem, quia minima odit
-                            omnis eum deserunt aspernatur labore dolorum nisi nesciunt? Perspiciatis, voluptate autem
-                            atque sint sunt omnis dolorem soluta voluptas id perferendis consequatur ex rem maxime
-                            accusantium architecto non eligendi dolorum.
-                        </P>
+                        <p class="aboutMe__text animado">
+                            Soy Analista Programador Universitario, actualmente estoy estudiando Ingenieria en Computación y realizando cursos sobre desarrollo web front-end.
+                        </p>
+                        <p class="aboutMe__text animado">
+                            Me considero una persona autodidacta y me siento muy motivado por continuar mi camino en el mundo de la programación web y desarrollarme profesionalmente.
+                        </p>
+                        <p class="aboutMe__text animado">
+                            Estoy en busqueda de desafios y nuevas experiencias que me ayuden a seguir mejorando mis habilidades.
+                        </p>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-sm">
-                        <h3 class=" aboutMe__title">Hobby</h3>
-                        <p class="aboutMe__text animado">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt
-                            quasi repudiandae eaque aliquid at. Obcaecati cum, voluptas alias expedita ipsa ad aperiam
-                            reprehenderit earum voluptate nesciunt nam sed dolor possimus.</p>
+                        <h3 class=" aboutMe__title">Experiencia</h3>
+                        <p class="aboutMe__text animado">
+                            Por el momento, mi experiencia en el mundo del desarrollo está formada por los proyectos que hice durante mis estudios y algunos proyectos personales que realicé para aplicar los conocimientos que he adquirido.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -142,8 +145,8 @@
                 <div class="projects__item__image primero col-sm-12 col-md-12 col-lg-6 ">
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="projects__item__description__title">Portafolio Personal</h3>
-                    <p class="projects__item__description__comment">Realicé esta pagina como proyecto final para el curso de Desarrollo Web de la plataforma Coderhouse. Utilicé bootstrap y Sass.</p>
+                    <h3 class="projects__item__description__title">Portfolio Personal</h3>
+                    <p class="projects__item__description__comment">Realicé esta pagina web personal, como proyecto final para el curso de Desarrollo Web de la plataforma Coderhouse. Utilicé bootstrap y Sass.</p>
                     <div class="projects__item__description__container">
                         <a href="https://jorge088.github.io/portfolio-Mendez/" target="blank" class="projects__item__description__container__button">
                             <span>Ver Sitio</span>
@@ -160,29 +163,12 @@
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Juego Simon DIce</h3>
-                    <p class="projects__item__description__comment">Hecho como parte de un trabajo practico de la materia Programación Web. Utilicé bootstrap, sass y  Js</p>
+                    <p class="projects__item__description__comment">Realicé este juego, como entrega, en un trabajo practico de la materia Programación Web. Utilicé javascript, bootstrap, sass.</p>
                     <div class="projects__item__description__container">
                         <a href="https://jorge088.github.io/JuegoSimonDice/" target="blank" class="projects__item__description__container__button">
                             <span>Ver Sitio</span>
                         </a>
                         <a href="https://github.com/jorge088/JuegoSimonDice" target="blank" class="projects__item__description__container__button">
-                            <span>Ver Codigo</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
-                <div class="projects__item__image col-sm-12 col-md-12 col-lg-6 ">
-                </div>
-                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="projects__item__description__title">Lorem, ipsum dolor.</h3>
-                    <p class="projects__item__description__comment">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sit eos adipisci quae esse aut, fuga consectetur ex quidem, iste ea natus nihil nostrum culpa laudantium rem laboriosam ipsum. Labore, voluptate?</p>
-                    <div class="projects__item__description__container">
-                        <a href="https://jorge088.github.io/portfolio-Mendez/" target="blank" class="projects__item__description__container__button">
-                            <span>Ver Sitio</span>
-                        </a>
-                        <a href="https://github.com/jorge088/portfolio-Mendez" target="blank" class="projects__item__description__container__button">
                             <span>Ver Codigo</span>
                         </a>
                     </div>
@@ -199,7 +185,7 @@
     <!-- START FOOTER -->
     <footer class="footer">
         <div class="footer__info">
-            <p>Puedes contactarme en mis redes.</p>
+            <p>Puedes contactarme en</p>
         </div>
         <div class="footer__social">
             <span class="footer__social__logo">
