cambio en link de cv

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="#projects">Proyectos</a>
                         </li>
                         <li class="nav-item header__nav__list__item">
-                            <a class="nav-link" target="blank" href="./asetts/CV_MendezJorge.pdf">CV <i
+                            <a class="nav-link" target="blank" href="https://drive.google.com/file/d/1pBYUT60Ko792an0y3UbWn8KopCs2qa-4/view?usp=sharing">CV <i
                                     class="fas fa-download"></i></a>
                         </li>
                     </ul>
@@ -82,13 +82,13 @@
                     <div class="col-lg-12 col-md-12 col-sm-12 col-sm">
                         <h3 class="aboutMe__title">Sobre mi</h3>
                         <p class="aboutMe__text animado">
-                            Soy Analista Programador Universitario, actualmente estoy estudiando Ingenieria en Computación y realizando cursos sobre desarrollo web front-end.
+                            Soy Analista Programador Universitario, actualmente estoy estudiando Ingeniería en Computación y realizando cursos sobre desarrollo web Front-end.
                         </p>
                         <p class="aboutMe__text animado">
                             Me considero una persona autodidacta y me siento muy motivado por continuar mi camino en el mundo de la programación web y desarrollarme profesionalmente.
                         </p>
                         <p class="aboutMe__text animado">
-                            Estoy en busqueda de desafios y nuevas experiencias que me ayuden a seguir mejorando mis habilidades.
+                            Estoy en búsqueda de desafíos y nuevas experiencias que me ayuden a seguir mejorando mis habilidades.
                         </p>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-sm">
