--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Portfolio Personal</h3>
-                    <p class="projects__item__description__comment">Realicé esta pagina web personal, como proyecto final para el curso de Desarrollo Web de la plataforma Coderhouse. Utilicé bootstrap y Sass.</p>
+                    <p class="projects__item__description__comment">Realicé esta página web personal, como proyecto final para el curso de Desarrollo Web de la plataforma Coderhouse. Utilicé bootstrap y Sass.</p>
                     <div class="projects__item__description__container">
                         <a href="https://jorge088.github.io/portfolio-Mendez/" target="blank" class="projects__item__description__container__button">
                             <span>Ver Sitio</span>
