cambio links a proyectos

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <h3 class="projects__item__description__title">Juego 'Simon Dice'</h3>
                     <p class="projects__item__description__comment">Realicé este juego, como entrega, en un trabajo practico de la materia Programación Web. Utilicé javascript, bootstrap, sass.</p>
                     <div class="projects__item__description__container">
-                        <a href="https://jorge088.github.io/JuegoSimonDice/" target="blank" class="projects__item__description__container__button">
+                        <a href="https://app-simon-dice.netlify.app/" target="blank" class="projects__item__description__container__button">
                             <span>Ver Sitio</span>
                         </a>
                         <a href="https://github.com/jorge088/JuegoSimonDice" target="blank" class="projects__item__description__container__button">
@@ -182,7 +182,7 @@
                     <h3 class="projects__item__description__title">Portfolio Personal</h3>
                     <p class="projects__item__description__comment">Realicé esta página web personal, como proyecto final para el curso de Desarrollo Web de la plataforma Coderhouse. Utilicé bootstrap y Sass.</p>
                     <div class="projects__item__description__container">
-                        <a href="https://jorge088.github.io/portfolio-Mendez/" target="blank" class="projects__item__description__container__button">
+                        <a href="https://portfolio-mendez.netlify.app/" target="blank" class="projects__item__description__container__button">
                             <span>Ver Sitio</span>
                         </a>
                         <a href="https://github.com/jorge088/portfolio-Mendez" target="blank" class="projects__item__description__container__button">
