Refactored main section. Quit Bootstrap

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet"> 
+
+    
     <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="./css/all.css" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/9eb45967b7.js"></script>
+    <!-- Styles -->
     <link href="./css/style.css" rel="stylesheet">
 
     <title>Jorge Mendez</title>
@@ -41,29 +45,27 @@
         </nav>
     </header>
 
-    <!-- PRESENTATION -->
-    <main id="main" class="max-width container-presentation">
-        <div class="row presentation">
-            <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 presentation__description">
-                <div class="presentation__description__title">
+    <main id="main">
+        <div class="presentation">
+            <div class="presentation__information">
+                <div class="presentation__information__titles">
                     <p><span class="typed"></span>! Me llamo</p>
                     <div id="welcome">
-                        <p>Bienvenid<i class="presentation__description__title__welcome">o</i></p>
-                        <p>Bienvenid<i class="presentation__description__title__welcome">a</i></p>
+                        <p>Bienvenid<i class="presentation__information__titles__welcome">o</i></p>
+                        <p>Bienvenid<i class="presentation__information__titles__welcome">a</i></p>
                     </div>
                     <h1>Jorge Mendez</h1>
                 </div>
-                <div class="presentation__description__subTitle">
-                    <h2>Analista Programador Universitario.</h2>
-                    <h2>Desarrollador Front End.</h2>
+                <div class="presentation__information__subtitles">
+                    <h2>Analista Programador Universitario</h2>
+                    <h2>Desarrollador Front End</h2>
                 </div>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 presentation__img">
+            <div class="presentation__img">
                 <img src="./asetts/perfil.jpg" alt="Foto de perfil, Mendez Jorge">
             </div>
         </div>
     </main>
-    <!-- END PRESENTATION -->
 
     <!-- START ABOUT ME -->
     <section class="max-width container-aboutMe " id="aboutMe">
