--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 
     <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="./css/all.css" rel="stylesheet">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/9eb45967b7.js"></script>
     <!-- Styles -->
@@ -68,7 +67,6 @@
         </div>
     </main>
 
-    <!-- START ABOUT ME -->
     <section class="aboutMe" id="aboutMe">
         <div class="aboutMe__container">
             <div class="aboutMe__container__information">
@@ -132,7 +130,7 @@
             </div>
         </div>
     </section>
-    <!-- END ABOUT ME -->
+
     <!-- START PROJECTS -->
     <section class="max-width container-projects" id="projects">
         <h2 class="sectionTitle">Estos son algunos de mis proyectos</h2>
@@ -209,7 +207,6 @@
     </div>
     <!-- ENDS PROJECTS -->
 
-    <!-- START FOOTER -->
     <footer class="footer">
         <div class="footer__info">
             <p>Puedes encontrarme en</p>
@@ -222,10 +219,12 @@
                 <a href="https://www.instagram.com/jorgem_088/?hl=es-la" target="blank"><i
                         class="fab fa-instagram"></i></a>
             </span>
+            <span class="footer__social__logo">
+                <a href="https://github.com/jorge088" target="blank"><i class="fa-brands fa-github"></i></a>
+            </span>
         </div>
     </footer>
 
-    <!-- ENDS FOOTER -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
     <script src="./js/practica.js"></script>
