added musicShop in Projects section

--- a/index.html
+++ b/index.html
@@ -137,19 +137,17 @@
         <div class="projects">
 
             <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
-                <div class="projects__item__image utilitiesApp col-sm-12 col-md-12 col-lg-6 ">
+                <div class="projects__item__image musicShop col-sm-12 col-md-12 col-lg-6 ">
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="projects__item__description__title">Sitio 'Utilities App'</h3>
-                    <p class="projects__item__description__comment">Página con aplicaciones útiles de uso diario. Cuenta
-                        con pronostico del tiempo actual, según la ciudad ingresada, y un convertidor de US dólares a
-                        pesos argentinos. Construido con Angular, typescript y sass.</p>
+                    <h3 class="projects__item__description__title">Music Shop</h3>
+                    <p class="projects__item__description__comment">Eccomerce sobre venta de intrumentos musicales, con lectura de datos y registro de compra en Firebase. Hecho con React JS, Tailwind y Firebase.</p>
                     <div class="projects__item__description__container">
-                        <a href="https://utilities-jm.netlify.app/" target="blank"
+                        <a href="https://musicshop-ar.netlify.app/" target="blank"
                             class="projects__item__description__container__button">
                             <span>Ver Sitio</span>
                         </a>
-                        <a href="https://github.com/jorge088/UtilitiesApp" target="blank"
+                        <a href="https://github.com/jorge088/MusicShop-React.git" target="blank"
                             class="projects__item__description__container__button">
                             <span>Ver Codigo</span>
                         </a>
@@ -163,8 +161,7 @@
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">SportShop</h3>
                     <p class="projects__item__description__comment">Ecommerce sobre venta de indumentaria deportiva de
-                        clubes de fútbol argentinos. Proyecto final presentado en curso de javascript de Coderhouse.
-                        Hecho con sass y js</p>
+                        clubes de fútbol argentinos. Hecho con html, css, js y sass</p>
                     <div class="projects__item__description__container">
                         <a href="https://sportshoparg.netlify.app/" target="blank"
                             class="projects__item__description__container__button">
@@ -179,12 +176,30 @@
             </div>
 
             <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
+                <div class="projects__item__image utilitiesApp col-sm-12 col-md-12 col-lg-6 ">
+                </div>
+                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
+                    <h3 class="projects__item__description__title">Sitio 'Utilities App'</h3>
+                    <p class="projects__item__description__comment">Sitio con aplicaciones utiles para usar a diario. Tiene para ver el clima según la ciudad ingresada y un convertidor de pesos AR al valor del dolar US informal actual. Hecho con Angular.</p>
+                    <div class="projects__item__description__container">
+                        <a href="https://utilities-jm.netlify.app/" target="blank"
+                            class="projects__item__description__container__button">
+                            <span>Ver Sitio</span>
+                        </a>
+                        <a href="https://github.com/jorge088/UtilitiesApp" target="blank"
+                            class="projects__item__description__container__button">
+                            <span>Ver Codigo</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
                 <div class="projects__item__image simonDice col-sm-12 col-md-12 col-lg-6 ">
                 </div>
                 <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
                     <h3 class="projects__item__description__title">Juego 'Simon Dice'</h3>
-                    <p class="projects__item__description__comment">Realicé este juego, como entrega, en un trabajo
-                        practico de la materia Programación Web. Utilicé javascript, bootstrap, sass.</p>
+                    <p class="projects__item__description__comment">Sitio con juego 'Simon Dice'. Hecho con html, css, js, bootstrap y sass.</p>
                     <div class="projects__item__description__container">
                         <a href="https://app-simon-dice.netlify.app/" target="blank"
                             class="projects__item__description__container__button">
