deleted bootstrap from projects, added new design with vanilla css

--- a/index.html
+++ b/index.html
@@ -132,7 +132,67 @@
     </section>
 
     <!-- START PROJECTS -->
-    <section class="max-width container-projects" id="projects">
+    <section class="projects" id="projects">
+
+        <div class="projects-container">
+            <h2>Estos son algunos de mis proyectos</h2>
+
+            <div class="projects__item">
+                <img src="./asetts/usefullApps.png" alt="useful apps site demo">
+                <div class="projects__item__information">
+                    <h3>Useful Apps</h3>
+                    <p>Sitio con aplicaciones utiles para usar a diario. Tiene para ver el clima según la ciudad
+                        ingresada y un convertidor de pesos AR al valor del dolar US informal actual. Hecho con Angular.
+                    </p>
+                    <div class="projects__item__information__btns">
+                        <a href="https://useful-apps.netlify.app/" target="_blank">Ver sitio</a>
+                        <a href="https://github.com/jorge088/UsefulApps" target="_blank">Ver codigo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="projects__item">
+                <img class="imgResponsive" src="./asetts/musicShop.png" alt="musicShop site demo">
+                <div class="projects__item__information">
+                    <h3>MusicShop</h3>
+                    <p>Eccomerce sobre venta de intrumentos musicales, con lectura de datos y registro de compra en
+                        Firebase. Hecho con React JS, Tailwind y Firebase.</p>
+                    <div class="projects__item__information__btns">
+                        <a href="https://music-shop-arg.netlify.app/" target="_blank">Ver sitio</a>
+                        <a href="https://github.com/jorge088/MusicShop" target="_blank">Ver codigo</a>
+                    </div>
+                </div>
+                <img class="imgLargeScreen" src="./asetts/musicShop.png" alt="musicShop site demo">
+            </div>
+            <div class="projects__item">
+                <img src="./asetts/sportshop.png" alt="sportshop site demo">
+                <div class="projects__item__information">
+                    <h3>Sportshop</h3>
+                    <p>Sitio con aplicaciones utiles para usar a diario. Tiene para ver el clima según la ciudad
+                        ingresada y un convertidor de pesos AR al valor del dolar US informal actual. Hecho con Angular.
+                    </p>
+                    <div class="projects__item__information__btns">
+                        <a href="https://sportshoparg.netlify.app/" target="_blank">Ver sitio</a>
+                        <a href="https://github.com/jorge088/sportShop" target="_blank">Ver codigo</a>
+                    </div>
+                </div>
+            </div>
+            <div class="projects__item">
+                <img class="imgResponsive" src="./asetts/simonDice.jpeg" alt="simon dice game site demo">
+                <div class="projects__item__information">
+                    <h3>Simon Dice</h3>
+                    <p>Sitio con aplicaciones utiles para usar a diario. Tiene para ver el clima según la ciudad
+                        ingresada y un convertidor de pesos AR al valor del dolar US informal actual. Hecho con Angular.
+                    </p>
+                    <div class="projects__item__information__btns">
+                        <a href="https://app-simon-dice.netlify.app/" target="_blank">Ver sitio</a>
+                        <a href="https://github.com/jorge088/JuegoSimonDice" target="_blank">Ver codigo</a>
+                    </div>
+                </div>
+                <img  src="./asetts/simonDice.jpeg" alt="simon dice game site demo">
+            </div>
+        </div>
+    </section>
+    <!-- <section class="max-width container-projects" id="projects">
         <h2 class="sectionTitle">Estos son algunos de mis proyectos</h2>
         <div class="projects">
 
@@ -216,10 +276,7 @@
 
 
         </div>
-    </section>
-    <div class="ejemplo">
-
-    </div>
+    </section> -->
     <!-- ENDS PROJECTS -->
 
     <footer class="footer">
