--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 
 
-    <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/9eb45967b7.js"></script>
     <!-- Styles -->
@@ -113,7 +112,10 @@
                         <img src="./asetts/bootstrap_logo.png" alt="logo bootstrap">
                         <p>BOOTSTRAP</p>
                     </span>
-
+                    <span class="aboutMe__container__skills__box__item animado2">
+                        <img src="./asetts/react__logo.png" alt="logo react">
+                        <p>REACT</p>
+                    </span>
                     <span class="aboutMe__container__skills__box__item animado2">
                         <img src="./asetts/angular_logo.png" alt="logo angular">
                         <p>ANGULAR</p>
@@ -192,91 +194,7 @@
             </div>
         </div>
     </section>
-    <!-- <section class="max-width container-projects" id="projects">
-        <h2 class="sectionTitle">Estos son algunos de mis proyectos</h2>
-        <div class="projects">
-
-            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
-                <div class="projects__item__image musicShop col-sm-12 col-md-12 col-lg-6 ">
-                </div>
-                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="projects__item__description__title">Music Shop</h3>
-                    <p class="projects__item__description__comment">Eccomerce sobre venta de intrumentos musicales, con lectura de datos y registro de compra en Firebase. Hecho con React JS, Tailwind y Firebase.</p>
-                    <div class="projects__item__description__container">
-                        <a href="https://musicshop-ar.netlify.app/" target="blank"
-                            class="projects__item__description__container__button">
-                            <span>Ver Sitio</span>
-                        </a>
-                        <a href="https://github.com/jorge088/MusicShop-React.git" target="blank"
-                            class="projects__item__description__container__button">
-                            <span>Ver Codigo</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
-                <div class="projects__item__image sportshop col-sm-12 col-md-12 col-lg-6 ">
-                </div>
-                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="projects__item__description__title">SportShop</h3>
-                    <p class="projects__item__description__comment">Ecommerce sobre venta de indumentaria deportiva de
-                        clubes de fútbol argentinos. Hecho con html, css, js y sass</p>
-                    <div class="projects__item__description__container">
-                        <a href="https://sportshoparg.netlify.app/" target="blank"
-                            class="projects__item__description__container__button">
-                            <span>Ver Sitio</span>
-                        </a>
-                        <a href="https://github.com/jorge088/sportShop.git" target="blank"
-                            class="projects__item__description__container__button">
-                            <span>Ver Codigo</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
-                <div class="projects__item__image utilitiesApp col-sm-12 col-md-12 col-lg-6 ">
-                </div>
-                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="projects__item__description__title">Sitio 'Utilities App'</h3>
-                    <p class="projects__item__description__comment">Sitio con aplicaciones utiles para usar a diario. Tiene para ver el clima según la ciudad ingresada y un convertidor de pesos AR al valor del dolar US informal actual. Hecho con Angular.</p>
-                    <div class="projects__item__description__container">
-                        <a href="https://utilities-jm.netlify.app/" target="blank"
-                            class="projects__item__description__container__button">
-                            <span>Ver Sitio</span>
-                        </a>
-                        <a href="https://github.com/jorge088/UtilitiesApp" target="blank"
-                            class="projects__item__description__container__button">
-                            <span>Ver Codigo</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row col-sm-12 col-md-12 col-lg-12 projects__item">
-                <div class="projects__item__image simonDice col-sm-12 col-md-12 col-lg-6 ">
-                </div>
-                <div class="projects__item__description col-sm-12 col-md-12 col-lg-6">
-                    <h3 class="projects__item__description__title">Juego 'Simon Dice'</h3>
-                    <p class="projects__item__description__comment">Sitio con juego 'Simon Dice'. Hecho con html, css, js, bootstrap y sass.</p>
-                    <div class="projects__item__description__container">
-                        <a href="https://app-simon-dice.netlify.app/" target="blank"
-                            class="projects__item__description__container__button">
-                            <span>Ver Sitio</span>
-                        </a>
-                        <a href="https://github.com/jorge088/JuegoSimonDice" target="blank"
-                            class="projects__item__description__container__button">
-                            <span>Ver Codigo</span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-
-
-        </div>
-    </section> -->
+    
     <!-- ENDS PROJECTS -->
 
     <footer class="footer">
@@ -298,7 +216,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script type="text/javascript" src="./js/popper.min.js"></script>
     <script src="./js/practica.js"></script>
     <script src="./js/script.js"></script>
 
