correct content in projects description

--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
                 <img src="./asetts/sportshop.png" alt="sportshop site demo">
                 <div class="projects__item__information">
                     <h3>Sportshop</h3>
-                    <p>Sitio con aplicaciones utiles para usar a diario. Tiene para ver el clima según la ciudad
-                        ingresada y un convertidor de pesos AR al valor del dolar US informal actual. Hecho con Angular.
+                    <p>Ecommerce de venta de indumentaria deportiva, con carrito de compras, buscador, filtros por categoria y formulario de compra. Hecho con js, css y sass.
                     </p>
                     <div class="projects__item__information__btns">
                         <a href="https://sportshoparg.netlify.app/" target="_blank">Ver sitio</a>
@@ -182,15 +181,14 @@
                 <img class="imgResponsive" src="./asetts/simonDice.jpeg" alt="simon dice game site demo">
                 <div class="projects__item__information">
                     <h3>Simon Dice</h3>
-                    <p>Sitio con aplicaciones utiles para usar a diario. Tiene para ver el clima según la ciudad
-                        ingresada y un convertidor de pesos AR al valor del dolar US informal actual. Hecho con Angular.
+                    <p>Sitio para jugar el famoso Simon Dice, cuenta con un registro de usuario contador de puntaje. Hecho con js y bootstrap.
                     </p>
                     <div class="projects__item__information__btns">
                         <a href="https://app-simon-dice.netlify.app/" target="_blank">Ver sitio</a>
                         <a href="https://github.com/jorge088/JuegoSimonDice" target="_blank">Ver codigo</a>
                     </div>
                 </div>
-                <img  src="./asetts/simonDice.jpeg" alt="simon dice game site demo">
+                <img class="imgLargeScreen" src="./asetts/simonDice.jpeg" alt="simon dice game site demo">
             </div>
         </div>
     </section>
