added contain to about section

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
                 <div class="aboutMe__container__information__item">
                     <h3>Experiencia</h3>
                     <p class="animado">
-                        Por el momento, mi experiencia en el mundo del desarrollo está formada por los proyectos que
-                        hice durante mis estudios y algunos proyectos personales que realicé para aplicar los
+                        Actualmente soy tutor en los cursos de javascript en la plataforma Coderhouse.
+                    </p>
+                    <p class="animado">
+                        Además mi experiencia en desarrollo está formada por proyectos que hice durante mis estudios y algunos proyectos personales que realicé para aplicar los
                         conocimientos que he adquirido.
                     </p>
                 </div>
@@ -143,8 +145,7 @@
                 <img src="./asetts/usefullApps.png" alt="useful apps site demo">
                 <div class="projects__item__information">
                     <h3>Useful Apps</h3>
-                    <p>Sitio con aplicaciones utiles para usar a diario. Tiene para ver el clima según la ciudad
-                        ingresada y un convertidor de pesos AR al valor del dolar US informal actual. Hecho con Angular.
+                    <p>Sitio con aplicaciones que utiles para usar a diario. Cuenta con una app para ver el clima en una ciudad ingresada y con un conversor de pesos AR a dolar blue, usando el precio de cambio real. Hecho con react. 
                     </p>
                     <div class="projects__item__information__btns">
                         <a href="https://useful-apps.netlify.app/" target="_blank">Ver sitio</a>
