--- a/index.html
+++ b/index.html
@@ -70,33 +70,29 @@
         <div class="aboutMe__container">
             <div class="aboutMe__container__information">
                 <div class="aboutMe__container__information__item">
-                    <h3>Sobre mi</h3>
+                    <h3>SOBRE MI</h3>
                     <p class="animado">
-                        Soy Analista Programador Universitario, actualmente estoy estudiando Ingeniería en Computación y
-                        realizando cursos sobre desarrollo web Front-end.
+                        Soy Analista Programador Universitario y actualmente estoy estudiando Ingeniería en Computación. Me gusta el desarrollo web, y es por esto, que decidí orientar mis estudios por el desarrollo Front-End.
                     </p>
                     <p class="animado">
-                        Me considero una persona autodidacta y me siento muy motivado por continuar mi camino en el
-                        mundo de la programación web y desarrollarme profesionalmente.
+                        Me considero una persona entusiasta por encarar nuevos proyectos y en adquirir conocimientos que me permitan mejorar en mi desempeño dia a dia. Me gusta aprender sobre otros y compartir mis conocimientos.
                     </p>
                     <p class="animado">
-                        Estoy en búsqueda de desafíos y nuevas experiencias que me ayuden a seguir mejorando mis
-                        habilidades.
+                        Inicie mi camino en el desarrollo web en la universidad, realizando pequeños proyectos junto a mis compañeros. Luego decidí continuar mis estudios de forma autodidacta con libros, guias y cursos en linea.  
                     </p>
                 </div>
                 <div class="aboutMe__container__information__item">
-                    <h3>Experiencia</h3>
+                    <h3>EXPERIENCIA</h3>
                     <p class="animado">
-                        Actualmente soy tutor en los cursos de javascript en la plataforma Coderhouse.
+                        Tutor en cursos de Javascript en Coderhouse. En donde, doy respuestas a las dudas y consultas de los alumnos durante las clases en linea. Además, me encargo de corregir y brindar feedback a sus entregas de proyectos.
                     </p>
                     <p class="animado">
-                        Además mi experiencia en desarrollo está formada por proyectos que hice durante mis estudios y algunos proyectos personales que realicé para aplicar los
-                        conocimientos que he adquirido.
+                        También cuento con proyectos que realicé como parte de trabajos finales en cursos y otros como proyectos personales para solucionar ciertas necesidades mias ó de conocidos. 
                     </p>
                 </div>
             </div>
             <div class="aboutMe__container__skills">
-                <h3>Habilidades</h3>
+                <h3>HABILIDADES</h3>
                 <div class="aboutMe__container__skills__box ">
                     <span class="aboutMe__container__skills__box__item animado2">
                         <img src="./asetts/html5_logo.png" alt="logo html">
@@ -116,7 +112,7 @@
                     </span>
                     <span class="aboutMe__container__skills__box__item animado2">
                         <img src="./asetts/react__logo.png" alt="logo react">
-                        <p>REACT</p>
+                        <p>REACT JS</p>
                     </span>
                     <span class="aboutMe__container__skills__box__item animado2">
                         <img src="./asetts/angular_logo.png" alt="logo angular">
@@ -140,12 +136,13 @@
 
         <div class="projects-container">
             <h2>Estos son algunos de mis proyectos</h2>
-
             <div class="projects__item">
                 <img src="./asetts/usefullApps.png" alt="useful apps site demo">
                 <div class="projects__item__information">
                     <h3>Useful Apps</h3>
-                    <p>Sitio con aplicaciones que utiles para usar a diario. Cuenta con una app para ver el clima en una ciudad ingresada y con un conversor de pesos AR a dolar blue, usando el precio de cambio real. Hecho con react. 
+                    <p>Sitio con aplicaciones que utiles para usar a diario. Cuenta con una app para ver el clima en una
+                        ciudad ingresada y con un conversor de pesos AR a dolar blue, usando el precio de cambio real.
+                        Hecho con react.
                     </p>
                     <div class="projects__item__information__btns">
                         <a href="https://useful-apps.netlify.app/" target="_blank">Ver sitio</a>
@@ -153,6 +150,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="projects__item">
                 <img class="imgResponsive" src="./asetts/musicShop.png" alt="musicShop site demo">
                 <div class="projects__item__information">
@@ -170,7 +168,8 @@
                 <img src="./asetts/sportshop.png" alt="sportshop site demo">
                 <div class="projects__item__information">
                     <h3>Sportshop</h3>
-                    <p>Ecommerce de venta de indumentaria deportiva, con carrito de compras, buscador, filtros por categoria y formulario de compra. Hecho con js, css y sass.
+                    <p>Ecommerce de venta de indumentaria deportiva, con carrito de compras, buscador, filtros por
+                        categoria y formulario de compra. Hecho con js, css y sass.
                     </p>
                     <div class="projects__item__information__btns">
                         <a href="https://sportshoparg.netlify.app/" target="_blank">Ver sitio</a>
@@ -182,7 +181,8 @@
                 <img class="imgResponsive" src="./asetts/simonDice.jpeg" alt="simon dice game site demo">
                 <div class="projects__item__information">
                     <h3>Simon Dice</h3>
-                    <p>Sitio para jugar el famoso Simon Dice, cuenta con un registro de usuario contador de puntaje. Hecho con js y bootstrap.
+                    <p>Sitio para jugar el famoso Simon Dice, cuenta con un registro de usuario contador de puntaje.
+                        Hecho con js y bootstrap.
                     </p>
                     <div class="projects__item__information__btns">
                         <a href="https://app-simon-dice.netlify.app/" target="_blank">Ver sitio</a>
@@ -193,7 +193,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- ENDS PROJECTS -->
 
     <footer class="footer">
